--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,8 +5,10 @@
       {{ else }}
       {{ partial "logo.html" . }}
       <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a></span>
-        <span><a href="https://github.com/panr/hugo-theme-hello-friend" target="_blank">Theme</a> made by <a href="https://github.com/panr" target="_blank">panr</a></span>
+        <span>© {{ now.Year }} </span> 
+        {{ if $.Site.Params.author}}
+          &nbsp;{{$.Site.Params.author}}
+        {{ end }}
       </div>
     {{ end }}
   </div>
